Quick fix: added overflow hidden to body

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ html, body {
 	width: 100%;
 	height: 100vh;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 .game-over {
